--- a/ui.apps/src/main/content/jcr_root/apps/AEMSPA62/components/content/helloworld/helloworld.html
+++ b/ui.apps/src/main/content/jcr_root/apps/AEMSPA62/components/content/helloworld/helloworld.html
@@ -16,6 +16,6 @@
 <p data-sly-test="${properties.text}">Text property: ${properties.text}</p>
 
 <pre data-sly-use.hello="com.techaspect.spa.core.models.HelloWorldModel">
-HelloWorldModel says:
+HelloWorldModel says: teetst kjdn
 ${hello.message}
 </pre>
